src/objects/raw_material__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contacts__c</referenceTo>
        <relationshipLabel>raw material</relationshipLabel>
        <relationshipName>raw_material</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_receiving__c</fullName>
        <label>Date of receiving</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Made_in__c</fullName>
        <label>Made in</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                    <default>true</default>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <label>Quality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <label>Store</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipLabel>raw material</relationshipLabel>
        <relationshipName>raw_material</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>raw material</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>raw Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>raw material</pluralLabel>
    <recordTypes>
        <fullName>Provided</fullName>
        <active>true</active>
        <label>Provided</label>
    </recordTypes>
    <recordTypes>
        <fullName>Used</fullName>
        <active>true</active>
        <label>Used</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>